WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79910
Applying region style should not need to access parent rules
https://bugs.webkit.org/show_bug.cgi?id=79910
Summary
Applying region style should not need to access parent rules
Antti Koivisto
Reported
2012-02-29 07:25:22 PST
Currently CSSStyleSelector::applyProperties looks into parent rules to see if a rule is part of region style. The plan is to eliminate the rule parent pointer so this needs to be refactored.
Attachments
patch
(12.66 KB, patch)
2012-02-29 07:43 PST
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2012-02-29 07:43:21 PST
Created
attachment 129450
[details]
patch
Andreas Kling
Comment 2
2012-02-29 08:42:04 PST
Comment on
attachment 129450
[details]
patch r=me.
Antti Koivisto
Comment 3
2012-02-29 10:08:51 PST
http://trac.webkit.org/changeset/109227
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug